Configure CORS and security rules: add frontend URL, adjust endpoint permissions, and enhance session/logout policies.